# my-own-RAG

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: secrets.example.toml
scripts/: create_sample_pdf.ps1
